# unplot

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  packaging.yml  release.yml
config/: deploy.env.example
crates/curve-engine/: Cargo.toml
crates/curve-engine/src/: approximate.rs  calculus.rs  coeffs.rs  curve.rs  document.rs  error.rs  export.rs  knot.rs  latex.rs  lib.rs  poly.rs  resample.rs  spline.rs  symbolic.rs  validate.rs
crates/curve-engine/src/approximate/: basis.rs  mod.rs  rational.rs  sinusoid.rs
crates/curve-engine/tests/: properties.rs
docs/: PLAN.md  linux-packaging.md
packaging/aur/: PKGBUILD.tmpl
packaging/homebrew/: unplot.rb.tmpl
src/: about.test.ts  about.ts  calculusView.test.ts  calculusView.ts  dpr.test.ts  dpr.ts  draw.ts  edit.test.ts  edit.ts  files.ts  fit.ts  fullscreen.test.ts  fullscreen.ts  grid.test.ts  grid.ts  history.test.ts  history.ts  latexView.test.ts  latexView.ts  main.ts  navigate.test.ts  navigate.ts  points.test.ts  points.ts  pointsView.test.ts  pointsView.ts  stroke.test.ts  stroke.ts  styles.css  theme.test.ts  theme.ts  viewport.test.ts  viewport.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: approximation.rs  calculus_commands.rs  curve_commands.rs  dto.rs  file_commands.rs  latex_commands.rs  lib.rs
