[package]
name = "curve-engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Headless curve engine for unplot: shape-preserving piecewise cubic Hermite splines, analytic calculus, and versioned serialization."
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
